# my_stock_data

./: .gitignore  Dockerfile  README.md  README_rust.md  docker-compose.yml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh
events/: event.json  s3.json
lambda-python3.9/: samconfig.toml  template.yaml
lambda-python3.9/.aws-sam/: build.toml
lambda-python3.9/hello_world/: Dockerfile  app.py  s3example.py
lambda-python3.9/tests/unit/: test_s3example.py
lambda_rust/: samconfig.toml  template.yaml
lambda_rust/.aws-sam/: build.toml
lambda_rust/stock_data/: Dockerfile  Makefile
lambda_rust/stock_data/src/: main.rs
stock_data/: Cargo.toml  Makefile  samconfig.toml  sc?s=$NIKK&p=D&b=5&g=0&i=0&r=1631528503869  template.yaml  test.txt
stock_data/.aws-sam/: build.toml
stock_data/src/: get_stock_data.rs  lib.rs  main.rs  stock.rs  twitter.rs
stock_data/src/config/: config.rs
stock_data/src/interfaces/: get_stockcharts.rs  get_stockchartsimg.rs  manage_s3.rs  mod.rs  post_tweet.rs
