[package]
name = "stock_data"
version = "0.1.0"
authors = ["c3drive <mihara000satsuki@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4"
lambda_http = "0.4.0"
serde_json = "1.0.59"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12"
async-trait = "0.1.36"

# Make Custom Error
thiserror = "1.0.26"

# Get Server Time
chrono = "0.4"

# Added due to reqwest dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "stock"
path = "src/stock.rs"

[[bin]]
name = "get"
path = "src/get_stock_data.rs"