[package]
name = "stock_data"
version = "0.1.0"
authors = ["c3drive <mihara000satsuki@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4"
lambda_http = "0.4.0"
serde_json = "1.0.59"

# https://crates.io/crates/reqwest/0.11.4
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }

scraper = "0.12"
async-trait = "0.1.36"
url = { version = "2", features = ["serde"] }

# Make Custom Error
thiserror = "1.0.26"

# Get Server Time
chrono = "0.4"

# Added due to reqwest dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }

bytes = "1"

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "stock"
path = "src/stock.rs"
